--- a/webshop/Views/Home/Index.cshtml
+++ b/webshop/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>SailAway</h1>
+    <p class="lead">On this site you can find the best deals on sailing equipment. Everything you need just a few clicks away</p>
+    <p><a href="@Url.Action("Register", "Account","Register")" class="btn btn-primary btn-lg">Register Today</a></p>
 </div>
 
 <div class="row">
