added basic angularjs

--- a/webshop/Views/Shared/_Layout.cshtml
+++ b/webshop/Views/Shared/_Layout.cshtml
@@ -1,14 +1,19 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="webshop" ng-controller="LandingPageController">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/angularjs")
+    @Scripts.Render("~/bundles/webshop")
+     
 
 </head>
 <body>
+    @*<input type="text" ng-model="models.helloAngular" />*@
+    
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -29,6 +34,7 @@
                         <li>@Html.ActionLink("Products", "Index", "Products")</li>
                         <li>@Html.ActionLink("Category", "Index", "Categories")</li>
                     }
+                    <li> @Html.ActionLink("{{models.helloAngular}}","Index", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
