--- a/webshop/Views/Shared/_Layout.cshtml
+++ b/webshop/Views/Shared/_Layout.cshtml
@@ -8,12 +8,12 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/angularjs")
     @Scripts.Render("~/bundles/webshop")
-     
+
 
 </head>
 <body>
     @*<input type="text" ng-model="models.helloAngular" />*@
-    
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -22,21 +22,25 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+                @Html.ActionLink("SailAway", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @{Html.RenderAction("CartSummary", "Cart");}
             </div>
+           
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    @if (Request.IsAuthenticated)
+                    @if (Request.IsAuthenticated && User.IsInRole("ShopAdmin"))
                     {
                         <li>@Html.ActionLink("Products", "Index", "Products")</li>
                         <li>@Html.ActionLink("Category", "Index", "Categories")</li>
                     }
-                    <li> @Html.ActionLink("{{models.helloAngular}}","Index", "Home")</li>
+                    <li> @Html.ActionLink("{{models.helloAngular}}", "Index", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
+
             </div>
         </div>
     </div>
