added angularjs for oa. product page

--- a/webshop/Views/Cart/_CartSummaryPartial.cshtml
+++ b/webshop/Views/Cart/_CartSummaryPartial.cshtml
@@ -1,9 +1,7 @@
 ﻿        <a href='@Url.Action("Index", "Cart")'>
             <strong>Cart</strong>
             <span id="cart-status" class="badge">
-                @ViewData["CartCount"]
+                @*@ViewData["CartCount"]*@
+                {{cartCount}}
             </span>
         </a>
-    
-
-}
