--- a/webshop/Views/Products/Details.cshtml
+++ b/webshop/Views/Products/Details.cshtml
@@ -49,6 +49,7 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink(" ", "Edit", new { id = Model.ID },new { @class = "glyphicon glyphicon-pencil" })
+
     @Html.ActionLink("Back to List", "Index")
 </p>
