--- a/webshop/Content/Site.css
+++ b/webshop/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.row ::before ::after{
+  background-color:red;
+  margin-top: 30px;
+  margin-bottom: 30px
+}
+
+img{
+    width: 100%;
+}
