--- a/webshop/Views/Home/Index.cshtml
+++ b/webshop/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<webshop.Models.Product>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -9,23 +11,22 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
+    @foreach (var product in Model)
+    {
+        <div class="col-lg-4 col-md-6 col-xs-12">
+            <div class="row text-center">
+                <h3>@product.Name</h3>
+            </div>
+            <div class="row" >
+                <img alt="@product.Name" src="@product.PictureUrl" height="350"  />
+            </div>
+           
+            <div class="row">
+                <div class="col-lg-12">
+                    @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { id = @product.ID }, new { @class = "btn btn-primary btn-md" })
+                </div>
+            </div>
+        </div>
+    }
 </div>
