--- a/webshop/Views/Products/Edit.cshtml
+++ b/webshop/Views/Products/Edit.cshtml
@@ -16,6 +16,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model=>model.AddedToShop)
+
+        <img alt="@Model.Name" src="@Model.PictureUrl" height="350" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.PictureUrl, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PictureUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PictureUrl, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="divider">-</div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
