--- a/webshop/Views/Shared/_Layout.cshtml
+++ b/webshop/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="webshop" ng-controller="LandingPageController">
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Products", "Products", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
                     @if (Request.IsAuthenticated && User.IsInRole("ShopAdmin"))
@@ -40,7 +40,7 @@
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Products", "Index", "Products")</li>
                                 <li class="divider"></li>
-                                <li>@Html.ActionLink("Categories","Index","Categories")</li>
+                                <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                                 <li class="divider"></li>
                                 <li> @Html.ActionLink("{{models.helloAngular}}", "Index", "Home")</li>
                             </ul>
