fixed basic angular list on products page.

--- a/webshop/Views/Home/Products.cshtml
+++ b/webshop/Views/Home/Products.cshtml
@@ -19,7 +19,7 @@
 
         <table class="table">
 
-            <tr ng-repeat="p in products | filter : searchProducts">
+            <tr ng-repeat="p in shopList.products">
 
                 <td>{{p.Name}}</td>
 
