--- a/webshop/Content/Site.css
+++ b/webshop/Content/Site.css
@@ -1,8 +1,17 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿html, body {
+    font-family: 'Lato', sans-serif;
+    font-size: 100%;
+    background: #F2F2F2;
 }
 
+    body a {
+        transition: 0.5s all;
+        -webkit-transition: 0.5s all;
+        -moz-transition: 0.5s all;
+        -o-transition: 0.5s all;
+        -ms-transition: 0.5s all;
+        text-decoration: none;
+    }
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -23,12 +32,332 @@ textarea {
     max-width: 280px;
 }
 
-.row ::before ::after{
-  background-color:red;
-  margin-top: 30px;
-  margin-bottom: 30px
+.row ::before ::after {
+    background-color: red;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
-img{
+/*Front page product thumbnails */
+.frontpageItem {
+    width: 500px;
+    overflow: hidden;
+    position: relative;
+    min-height: 600px;
+}
+
+    .frontpageItem img {
+        max-height: 400px;
+        position: absolute;
+    }
+
+    .frontpageItem .caption {
+        position: absolute;
+        bottom: 0px;
+    }
+
+/*----container----*/
+.container {
+    width: 70%;
+}
+/*----top-header---*/
+.top-header {
+    padding: 2em 0;
+}
+
+.logo {
+    float: left;
+    margin-top: 1.1em;
+}
+
+.top-header-info {
+    float: right;
+}
+
+/*---top-contact-info---*/
+.top-contact-info {
+    margin-bottom: 0.9em;
+    text-align: right;
+}
+
+    .top-contact-info li span {
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+    }
+
+        .top-contact-info li span.phone {
+            background: url(../Content/images/phone-icon.png) no-repeat 0px 0px;
+            vertical-align: middle;
+            margin-right: 0.2em;
+        }
+
+        .top-contact-info li span.mail {
+            background: url(../Content/images/mail-icon.png) no-repeat 0px 0px;
+            vertical-align: middle;
+            margin-right: 0.2em;
+        }
+
+    .top-contact-info ul li a:hover {
+        text-decoration: none;
+        color: #EF3626;
+    }
+
+/*Login and register section*/
+.login-register {
+    float: right;
+}
+
+    .login-register li a.register {
+        background: #F03627;
+        color: #FFF;
+        padding: 0.5em 2.5em;
+        display: inline-block;
+        border-radius: 0.3em;
+        -webkit-border-radius: 0.3em;
+        -moz-border-radius: 0.3em;
+        -o-border-radius: 0.3em;
+        -ms-border-radius: 0.3em;
+        border: 1px solid #B64E30;
+        border-top: 2px solid #B64E30;
+        font-weight: 600;
+    }
+
+
+    .login-register li a.login {
+        color: #444444;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin: 0 0.6em;
+        text-decoration: underline;
+    }
+
+        .login-register li a.login:hover {
+            color: #EF3626;
+            text-decoration: none;
+        }
+
+    .login-register li a.register {
+        background: #F03627;
+        color: #FFF;
+        padding: 0.5em 2.5em;
+        display: inline-block;
+        border-radius: 0.3em;
+        -webkit-border-radius: 0.3em;
+        -moz-border-radius: 0.3em;
+        -o-border-radius: 0.3em;
+        -ms-border-radius: 0.3em;
+        border: 1px solid #B64E30;
+        border-top: 2px solid #B64E30;
+        font-weight: 600;
+    }
+
+        .login-register li a.register:hover {
+            text-decoration: none;
+            background: #5B5B5B;
+            border: 1px solid #5B5B5B;
+            border-top: 2px solid #5B5B5B;
+        }
+
+/*Shopping Cart*/
+.top-user-section {
+    border: 1px solid #FFF;
+    padding: 0.7em 0.3em;
+    border-radius: 0.3em;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
+}
+
+
+    .top-user-section ul li {
+        list-style: none;
+    }
+
+    .top-user-section ul {
+        margin: 0;
+        padding: 0;
+    }
+
+.cart-details {
+    float: left;
+}
+
+span.cart {
+    width: 60px;
+    height: 35px;
+    display: inline-block;
+    background: url(../Content/images/cart.png) no-repeat 0px 6px;
+    border-right: 1px solid #DDD9D9;
+    padding-right: 0.8em;
+    margin-top: 0.3em;
+}
+
+.cart p {
+    margin-left: 58%;
+    margin-top: 18.5%;
+}
+
+
+/*could be used when I want to make the items in the cart visible */
+
+/*.cart-details li {
+    position: relative;
+}
+
+    .cart-details li:hover ul.cart-sub {
+        display: block;
+        position: absolute;
+        top: 55px;
+        left: 0px;
+    }
+
+ul.cart-sub {
+    display: none;
+    background: #FFF;
+    padding: 0.5em;
+}
+
+    ul.cart-sub li p {
+        color: #EF3626;
+    }*/
+
+/*Navigation*/
+.main-menu {
+    border: 1px solid #E6E6EB;
+    background: -moz-linear-gradient(top, #fefefe 0%, #f7f7f7 48%, #f7f7f7 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefefe), color-stop(48%,#f7f7f7), color-stop(100%,#f7f7f7)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #fefefe 0%,#f7f7f7 48%,#f7f7f7 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #fefefe 0%,#f7f7f7 48%,#f7f7f7 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #fefefe 0%,#f7f7f7 48%,#f7f7f7 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #fefefe 0%,#f7f7f7 48%,#f7f7f7 100%); /* W3C */
+    padding: 0 0.2em;
+    z-index: 999;
+}
+
+ul.top-nav {
+    margin: 0;
+}
+
+    ul.top-nav li span {
+        width: 1px;
+        height: 45px;
+        display: inline-block;
+        background: #DBDBDB;
+        top: 15px;
+        position: absolute;
+    }
+
+.top-nav li a {
+    color: #444444;
+    padding: 1em 1.5em;
+    font-size: 1.1em;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    font-weight: 800;
+}
+
+.top-nav ul li a:hover {
+    color: #EE3023;
+    background-color: #f7f7f7;
+}
+
+.top-nav:before,
+.top-nav:after {
+    content: " ";
+    display: table;
+}
+
+.top-nav:after {
+    clear: both;
+}
+
+nav {
+    position: relative;
+}
+
+    nav ul {
+        padding: 0;
+    }
+
+    nav li {
+        display: inline;
+        float: left;
+        position: relative;
+    }
+
+    nav a {
+        color: #fff;
+        display: inline-block;
+        text-align: center;
+        text-decoration: none;
+        line-height: 40px;
+    }
+
+        nav a:hover {
+            text-decoration: none;
+            color: #00A2C1;
+        }
+/*main menu break manipulation*/
+@media (max-width: 830px) {
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+        .navbar-collapse.collapse {
+            display: none !important;
+        }
+
+    .navbar-nav {
+        float: none !important;
+        margin: 7.5px -15px;
+    }
+
+        .navbar-nav > li {
+            float: none;
+        }
+
+            .navbar-nav > li > a {
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+}
+
+/*homepage slider*/
+.carousel {
+    position: relative;
+    float: left;
+    width: 80%;
+    margin-left:11%;
+}
+
+.carousel-inner {
     width: 100%;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    margin-top: -46px;
+}
+.carousel-control.left, .carousel-control.right {
+  background: none !important;
+  filter: progid: none !important;
+  outline: 0;
+ }
+.carousel .carousel-control {
+  visibility: hidden;
+}
+.carousel:hover .carousel-control {
+  visibility: visible;
 }
