--- a/webshop/Views/Home/Index.cshtml
+++ b/webshop/Views/Home/Index.cshtml
@@ -4,27 +4,29 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
+@*<div class="jumbotron">
     <h1>SailAway</h1>
     <p class="lead">On this site you can find the best deals on sailing equipment. Everything you need just a few clicks away</p>
     <p><a href="@Url.Action("Register", "Account","Register")" class="btn btn-primary btn-lg">Register Today</a></p>
-</div>
+</div>*@
 
 <div class="row">
-
+    <h1>De laatste nieuwe producten in onze collectie!</h1>
     @foreach (var product in Model)
     {
         <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="row text-center">
-                <h3>@product.Name</h3>
-            </div>
-            <div class="row" >
-                <img alt="@product.Name" src="@product.PictureUrl" height="350"  />
-            </div>
-           
-            <div class="row">
-                <div class="col-lg-12">
-                    @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { id = @product.ID }, new { @class = "btn btn-primary btn-md" })
+            <div class="thumbnail frontpageItem">
+                <img class="" alt="@product.Name" src="@product.PictureUrl" height="350" />
+            
+                <div class="caption">
+                    <h3>@product.Name</h3> 
+                    <p>€@product.Price</p>
+                    <p>@product.Description</p>
+                    <p>
+                        @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { id = @product.ID }, new { @class = "btn btn-primary btn-md" })
+
+                    </p>
+                      
                 </div>
             </div>
         </div>
