--- a/webshop/Views/Shared/_Layout.cshtml
+++ b/webshop/Views/Shared/_Layout.cshtml
@@ -9,25 +9,59 @@
     @Scripts.Render("~/bundles/angularjs")
     @Scripts.Render("~/bundles/webshop")
 
-
 </head>
 <body>
-    @*<input type="text" ng-model="models.helloAngular" />*@
+    <!----container---->
+    <div class="container">
+        <!----top-header---->
+        <div class="top-header">
+            <div class="logo">
+                <a href="@Url.Action("Index", "Home")">
+                    <img src="~/Content/images/logo.png" title="webshopLogo" alt="your logo here" />
+                </a>
+            </div>
+            <div class="top-header-info">
+                <div class="top-contact-info">
+                    <ul class="unstyled-list list-inline">
+                        <li><span class="phone"> </span>0471 50 46 87</li>
+                        <li><span class="mail"> </span><a href="mailto:info@sailaway.eu?Subject=webshop%20feedback">info@sailaway.eu</a></li>
+                        <div class="clearfix"> </div>
+                    </ul>
+                </div>
+                <div class="top-user-section">
+                    <div class="cart-details">
+                        <ul class="unstyled-list list-inline">
+                            <li>
+                                <span class="cart">
+                                    <p class="badge">
+                                        @*TODO: REPLACE FIXED COUNT WITH {{cartcount}}*@
+                                        3
+                                    </p>
+                                </span>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+                            </li>
+                        </ul>
+                    </div>
+                    @Html.Partial("_LoginPartial")
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <div class="clearfix"> </div>
+        </div>
+        <!----//top-header---->
+        <!---top-header-nav---->
+        <div class="navbar main-menu top-nav">
+
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-
-                @Html.ActionLink("SailAway", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-
             </div>
 
             <div class="navbar-collapse collapse">
+
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Products", "Products", "Home")</li>
@@ -46,19 +80,65 @@
                             </ul>
                         </li>
                     }
-                </ul>                
-                <ul class="nav navbar-nav navbar-right">
-                    <li>@{Html.RenderAction("CartSummary", "Cart");}</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
+
+    <!--//top-header-nav---->
+    <!---image slideshow---->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="~/Content/images/slide1.jpg" alt="offshore sailing">
+                <div class="carousel-caption">
+                    <h3>Offshore Sailing</h3>
+                    <p>Alles voor extreme offshore sailing</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="~/Content/images/slide2.jpg" alt="zeilhorloges">
+                <div class="carousel-caption">
+                    <h3>Zeilhorloges</h3>
+                    <p>En andere onmisbare items voor een wedstrijdzeiler</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="~/Content/images/slide3.jpg" alt="zwemvesten">
+                <div class="carousel-caption">
+                    <h3>Zwemvesten</h3>
+                    <p>Veiligheid boven alles!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!----- //End-image slideshow---->
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Sam Van den Bossche</p>
         </footer>
     </div>
 
