--- a/webshop/Views/Home/Index.cshtml
+++ b/webshop/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 @*<div class="jumbotron">
-    <h1>SailAway</h1>
-    <p class="lead">On this site you can find the best deals on sailing equipment. Everything you need just a few clicks away</p>
-    <p><a href="@Url.Action("Register", "Account","Register")" class="btn btn-primary btn-lg">Register Today</a></p>
-</div>*@
+        <h1>SailAway</h1>
+        <p class="lead">On this site you can find the best deals on sailing equipment. Everything you need just a few clicks away</p>
+        <p><a href="@Url.Action("Register", "Account","Register")" class="btn btn-primary btn-lg">Register Today</a></p>
+    </div>*@
 
 <div class="row">
     <h1>De laatste nieuwe producten in onze collectie!</h1>
@@ -16,17 +16,27 @@
     {
         <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="thumbnail frontpageItem">
-                <img class="" alt="@product.Name" src="@product.PictureUrl" height="350" />
-            
-                <div class="caption">
-                    <h3>@product.Name</h3> 
-                    <p>€@product.Price</p>
-                    <p>@product.Description</p>
-                    <p>
-                        @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { id = @product.ID }, new { @class = "btn btn-primary btn-md" })
+                <div class="thumbnail-image">
+                    <img class="" alt="@product.Name" src="@product.PictureUrl" height="350" />
+                </div>
 
-                    </p>
-                      
+
+                <div class="caption">
+                    <div class="caption-title">
+                        <h3>@product.Name</h3>
+                    </div>
+                    <div class="product-price caption-price">
+                        <span>€@product.Price</span>
+                    </div>
+                    <div class="caption-description">
+                        @product.Description
+                    </div>
+                    <div class="clearfix"> </div>
+                    <div class="caption-button">
+                        @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { id = @product.ID }, new { @class = "btn btn-primary btn-md" })
+                    </div>
+
+
                 </div>
             </div>
         </div>
