--- a/webshop/Views/Products/Index.cshtml
+++ b/webshop/Views/Products/Index.cshtml
@@ -45,8 +45,8 @@
                 @Html.DisplayFor(modelItem => product.Category.Name)
             </td>
             <td>
-                @Html.ActionLink(" ", "Edit", new { id = product.ID }, new { @class = "glyphicon glyphicon-pencil" }) |
-                @Html.ActionLink(" ", "Details", new { id = product.ID }, new { @class = "glyphicon glyphicon-th-list" }) |
+                @Html.ActionLink(" ", "Edit", new { id = product.ID }, new { @class = "glyphicon glyphicon-pencil" }) 
+                @Html.ActionLink(" ", "Details", new { id = product.ID }, new { @class = "glyphicon glyphicon-th-list" }) 
                 @Html.ActionLink(" ", "Delete", new { id = product.ID }, new { @class = "glyphicon glyphicon-remove" })
             </td>
         </tr>
