added add to cart function with feedback to cartsummarypartial

--- a/webshop/Views/Home/Index.cshtml
+++ b/webshop/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     </div>
                     <div class="clearfix"> </div>
                     <div class="caption-button">
-                        @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { id = @product.ID }, new { @class = "btn btn-primary btn-md" })
+                        @Html.ActionLink("Add to cart", "AddToCart", "Cart", new { productId = @product.ID }, new { @class = "btn btn-primary btn-md" })
                     </div>
 
 
